[package]
name = "bookworm"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bookworm"
path = "src/bin/main.rs"

[lib]
name = "bookworm"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["std", "derive", "env"] }
tokio = { version = "1.46", features = ["macros", "rt", "rt-multi-thread", "sync"] }
xml-rs = "0.8"
zip = "4.3"
