[package]
name = "bookworm"
edition = "2024"
version = "1.0.0-pre.954d5ab"
authors = ["Leo Borai <estebanborai@gmail.com>"]
categories = ["web-programming"]
description = "Utilities to manage your ebook collection (PDFs, ePubs, KePubs, and more)"
documentation = "https://docs.rs/bookworm"
keywords = ["book", "pdf", "ebook", "kepub", "utils"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/LeoBorai/bookworm"
readme = "./README.md"

[[bin]]
name = "bookworm"
path = "src/bin/main.rs"

[lib]
name = "bookworm"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["std", "derive", "env"] }
lopdf = "0.38"
tokio = { version = "1.49", features = ["macros", "rt", "rt-multi-thread", "sync"] }
xml-rs = "1.0"
zip = "7"
